logo icon , html5 pages , README.md

--- a/app/src/main/assets/screen.html
+++ b/app/src/main/assets/screen.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>屏幕分享</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="css/main.css"/>
 
 </head>
 <body>
-<img id="image" width="450">
+<header id="header">
+        <img id="image">
+</header>
 </body>
 
 <script>
