--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>屏幕分享</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/main.css" />
 </head>
-<body>
-<a href="screen.html">start</a>
+<body id="top">
+
+<!-- Header -->
+<header id="header">
+    <div class="content">
+        <h2><a href="#">屏幕分享</a></h2>
+        <p>手机屏幕，轻松分享至<br />
+            其他设备的屏幕之上，只需极简的操作</p>
+        <ul class="actions">
+            <li><a href="screen.html" class="button special icon fa-play">开始</a></li>
+        </ul>
+    </div>
+    <div class="image phone"><div class="inner"><img src="images/screen_logo.jpg" alt="" /></div></div>
+</header>
 </body>
 </html>
