change html5 pages style

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -13,7 +13,7 @@
     <div class="content">
         <h2><a href="#">屏幕分享</a></h2>
         <p>手机屏幕，轻松分享至<br />
-            其他设备的屏幕之上，只需极简的操作</p>
+            其他设备，只需极简的操作</p>
         <ul class="actions">
             <li><a href="screen.html" class="button special icon fa-play">开始</a></li>
         </ul>
