--- a/app/src/main/assets/screen.html
+++ b/app/src/main/assets/screen.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<header id="header">
+<header id="header" style="padding: 0 0 0 0">
         <img id="image">
 </header>
 </body>
