remove unuse css

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -15,7 +15,7 @@
         <p>手机屏幕，轻松分享至<br />
             其他设备，只需极简的操作</p>
         <ul class="actions">
-            <li><a href="screen.html" class="button special icon fa-play">开始</a></li>
+            <li><a href="screen.html" class="button special">开始</a></li>
         </ul>
     </div>
     <div class="image phone"><div class="inner"><img src="images/screen_logo.jpg" alt="" /></div></div>
