--- a/app/src/main/assets/screen.html
+++ b/app/src/main/assets/screen.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header id="header" style="padding: 0 0 0 0">
-        <img id="image">
+    <img id="image">
 </header>
 </body>
 
@@ -50,6 +50,7 @@
     }
 
     var ws;
+    var counter = 0;
 
     function runWebSocket(wsAddress) {
         if ("WebSocket" in window) {
@@ -64,6 +65,7 @@
             ws.onmessage = function (evt) {
                 console.log("onmessage");
                 image.src = 'data:image/jpg;base64,' + evt.data;
+                console.log(counter++)
             };
             ws.onclose = function () {
                 // websocket is closed.
