--- a/app/src/main/assets/screen.html
+++ b/app/src/main/assets/screen.html
@@ -11,16 +11,15 @@
 <header id="header" style="padding: 0 0 0 0">
     <img id="image">
 </header>
-<ul id="list">
-
-</ul>
+<!--<ul id="list">-->
+<!--</ul>-->
 </body>
 
 <script>
     'use strict';
 
     var image = document.getElementById('image');
-    var list = document.getElementById('list');
+    //var list = document.getElementById('list');
 
     loadXMLDoc("/wsinfo");
 
@@ -68,13 +67,13 @@
             };
             ws.onmessage = function (evt) {
                 image.setAttribute("src", "data:image/jpg;base64," + evt.data);
-                var a = document.createElement('a');
-                a.innerHTML = '' + counter++;
-                a.style.margin= "3px";
-                a.onclick=function () {
-                    image.setAttribute("src", "data:image/jpg;base64," + evt.data);
-                };
-                list.appendChild(a);
+                //var a = document.createElement('a');
+                //a.innerHTML = '' + counter++;
+                //a.style.margin= "3px";
+                //a.onclick=function () {
+                //    image.setAttribute("src", "data:image/jpg;base64," + evt.data);
+                //};
+                //list.appendChild(a);
             };
             ws.onclose = function () {
                 // websocket is closed.
