--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -11,11 +11,12 @@
 <!-- Header -->
 <header id="header">
     <div class="content">
-        <h2><a href="#">屏幕分享</a></h2>
-        <p>手机屏幕，轻松分享至<br />
-            其他设备，只需极简的操作</p>
+        <h2><a href="#">Screen Share</a></h2>
+        <p>Instantly screen share<br />
+            from your Android phone<br />
+            to browser of other device</p>
         <ul class="actions">
-            <li><a href="screen.html" class="button special">开始</a></li>
+            <li><a href="screen.html" class="button special">Start</a></li>
         </ul>
     </div>
     <div class="image phone"><div class="inner"><img src="images/screen_logo.jpg" alt="" /></div></div>
