--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>屏幕分享</title>
+    <title>Screen Share</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
